--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-Flask==2.2.3
-Flask-SocketIO==5.3.2
-Flask-SQLAlchemy==3.0.3
-gevent==24.2.1
-gevent-websocket==0.10.1
-python-engineio==4.3.4
-python-socketio==5.7.2
-gunicorn==23.0.0
-qrcode==7.4.2
-Werkzeug==2.2.3
-Pillow==10.0.0
-Jinja2==3.1.6
-itsdangerous==2.1.2
-Markdown==3.7
-bcrypt==4.3.0
+Flask==2.0.1
+gunicorn==20.1.0
 opencv-python-headless==4.8.1.78
-ultralytics==8.0.227
-matplotlib==3.8.2
-numpy==1.26.3
+numpy==1.26.0
+matplotlib==3.8.0
+gevent==23.9.1
+Werkzeug==2.0.1
+Flask-SocketIO==5.1.1
+python-socketio==5.4.0
+eventlet==0.33.3
+torch==2.0.0
+torchvision==0.15.0
+ultralytics==8.0.0
+python-engineio==4.3.0
