--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.0.1
 Werkzeug==2.0.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
 gunicorn==23.0.0
 gevent==23.9.1
 opencv-python-headless==4.8.1.78
