--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Flask==3.0.2
-Flask-SQLAlchemy==3.1.1
-Flask-SocketIO==5.3.6
-Werkzeug==3.0.1
-SQLAlchemy==2.0.28
-python-socketio==5.11.1
-python-engineio==4.9.0
-gevent==24.2.1
+Flask==2.0.1
+Werkzeug==2.0.1
+Flask-SQLAlchemy==2.5.1
+gunicorn==23.0.0
+gevent==23.9.1
 gevent-websocket==0.10.1
+Flask-SocketIO==5.1.1
+python-socketio==5.4.0
+python-engineio==4.3.0
+eventlet==0.33.3
 qrcode==7.4.2
 Pillow==10.2.0
 python-dotenv==1.0.1
-gunicorn==21.2.0
